# StockAnalysis

./: .gitignore  BBC_export.csv  Chart_file_structure.vsdx  README.md  main.py  pdf_extraction.py  pyproject.toml  rules.py  setup.py  test.db
archive/: company.py  p.py
data/processed/: BBC_export.csv  test.db
extraction/: extraction.py
extraction_pdf/: extraction.py
financial_pipeline/cleaner/: financial_data_cleaner.py
financial_pipeline/evaluator/: graham_evaluator.py
financial_pipeline/importer/: financial_data_importer.py
financial_pipeline/interface/: TTE.txt  financial_data_interface.py
financial_pipeline/ml/: models.py
financial_pipeline/rules/: rules.py
financial_pipeline/storage/: company_storage.py  rules_storage.py
financial_pipeline/utils/: helpers.py
fresh_data/: importer.py  storage.py
interface/: ORA.txt  reports.py  webapp.py
pdf/: 2024_05_03_air-liquide-rapport-financier-semestriel-2022.pdf.json
rules/: rules.py
scripts/: main.py  run_pipeline.py  run_streamlit.py
stock_analysis/: .gitignore  Nouveau Document Microsoft Word.docx  README.md  company.db  main.py  out.csv  pyproject.toml  rules.py  yh_get_tickers.py
stock_analysis/extraction/: extraction.py
stock_analysis/fresh_data/: company.py  importer.py  storage.py
stock_analysis/interface/: webapp.py
stock_analysis/rules/: rules.py
tests/: test.py  test_cleaner.py  test_graham_evaluator.py  test_importer.py  test_storage.py
webscraping/: importer.py
