[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["Vincent Reau <vincent.reau1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
