[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["Vincent Reau <vincent.reau1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
setuptools = "^70.0.0"
polygon-api-client = "^1.13.7"
yfinance = "0.2.58"
chardet = "^5.2.0"
streamlit = "^1.38.0"
curl-cffi = "^0.10.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"

[tool.setuptools]
packages = ["financial_pipeline", "scripts"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
