[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["Vincent Reau <vincent.reau1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
setuptools = "^70.0.0"
polygon-api-client = "^1.13.7"
yfinance = "^0.2.40"
chardet = "^5.2.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
